--- a/header.tex
+++ b/header.tex
@@ -7,6 +7,7 @@
 \usepackage{xspace}        
 \usepackage{graphicx}
 \usepackage{listings}
+\usepackage{bm}
 
 \bibliographystyle{jss}
 %\bibliographystyle{apalike}
