Added command \plim and \Plim

--- a/header.tex
+++ b/header.tex
@@ -31,6 +31,9 @@
 \newcommand\covmatX{\mathbb{U}}
 \newcommand\covmatY{\mathbb{V}}
 
+\newcommand\plim{\overset{p}{\rightarrow}}
+\newcommand\Plim{\overset{P}{\rightarrow}}
+
 \newcommand\prob[1]{\mathbb{P}\left[{#1}\right]}
 \newcommand\expect[1]{\mathbb{E}\left[{#1}\right]}
 \newcommand\var[1]{\mathrm{Var}\left[{#1}\right]}
